--- a/eve/workers/pod.yaml
+++ b/eve/workers/pod.yaml
@@ -4,7 +4,7 @@ metadata:
   name: "pod"
 spec:
   containers:
-  - name: Zenko-MD
+  - name: zenko-md
     resources:
       requests:
         cpu: 500m
